# Crane

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Cargo.toml.bak  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yml
admin/: .eslintrc.js  .eslintrc.json  .release-it.json  CHANGELOG.md  Dockerfile.adminservice  Dockerfile.prod  package.json
admin/src/: express-app.js  index.js
admin/src/config/: constants.js  index.js
admin/src/controllers/: adminUserController.js  dashboardController.js  hashtagsController.js  postsController.js  reelsController.js  storiesController.js  usersController.js
admin/src/database/: index.js
admin/src/database/repository/: admin-user-repository.js
admin/src/lookup/: base.lookup.js
admin/src/middleware/: auth.js
admin/src/routes/: admin-user.routes.js  dashboard.routes.js  hashtags.routes.js  index.js  posts.routes.js  reels.routes.js  stories.routes.js  users-routes.js
admin/src/services/: admin-user-service.js  dashboard-service.js  hashtag-service.js  post-service.js  reel-service.js  story-service.js  user-service.js
admin/src/templates/email/: emailVerification.ejs
admin/src/utils/: app-errors.js  authentication.js  aws-handler.js  email.js  error-handler.js  health-check.js  index.js  logger.js  phone-number.js  redis.js  response-handler.js
admin/src/validations/: adminUserValidation.js  commonValidation.js  dashboardValidation.js
assets/shell/: crane-init.bash  crane-init.zsh  zlogin  zprofile  zshenv  zshrc
crates/crane_term/: Cargo.toml
crates/crane_term/src/: alt_screen.rs  cell.rs  grid.rs  handler.rs  index.rs  lib.rs  mode.rs  perform.rs  processor.rs  reflow.rs  row.rs  scrollback.rs  selection.rs  sync.rs  term.rs
crates/warp_term_spike/: Cargo.toml
crates/warp_term_spike/assets/: README.md
crates/warp_term_spike/src/: controller.rs  file_pane.rs  file_tree.rs  git.rs  grid_element.rs  input.rs  layout.rs  lib.rs  main.rs  projects.rs  rect_probe.rs  shell.rs  split.rs  theme.rs  view.rs
docs/: warpui-1to1-punchlist.md  warpui-1to1-spec.md  warpui-completion-gaps.md  warpui-final-parity-audit.md  warpui-leftpanel-followups.md  warpui-migration-plan.md  warpui-open-items.md
docs/archive/warpui-migration/: warpui-1to1-punchlist.md  warpui-1to1-spec.md  warpui-branch-worktree-followups.md  warpui-completeness-audit.md  warpui-faithful-port-checklist.md  warpui-final-gaps.md  warpui-leftpanel-followups.md  warpui-migration-execution.md  warpui-migration-plan.md  warpui-open-items.md  warpui-parity-fixes.md
docs/plans/: 2026-04-15-phase1-skeleton.md  2026-04-16-phase2-terminal-core.md
docs/specs/: 2026-04-15-crane-architecture-design.md  2026-04-16-phase2-terminal-core-design.md  2026-04-29-crane-term-integration.md  2026-05-03-pdf-viewer-design.md  2026-05-09-job-system-and-file-watcher.md  2026-07-09-multi-git-grouping-and-instant-branch-design.md
docs/superpowers/plans/: 2026-05-04-git-log-pane.md  2026-07-15-chrome-polish.md  2026-07-18-file-tabs-per-workspace.md  2026-07-18-markdown-pane-session-and-toggle.md  2026-07-18-markdown-rendering.md  2026-07-19-image-viewer.md  2026-07-19-pdf-viewer.md  2026-07-20-session-ranked-terminal-history.md
docs/superpowers/specs/: 2026-05-04-git-log-pane-design.md  2026-07-15-chrome-polish-design.md  2026-07-18-document-viewers-design.md  2026-07-20-session-ranked-terminal-history-design.md  2026-07-24-terminal-status-bar-design.md
examples/: pdf_smoke.rs
icons/: crane.icns
scripts/: make-icns.sh  vendor-pdfium.sh
scripts/dmg-assets/: Fix Gatekeeper.command  README - First Run.txt
scripts/linux/: build-appimage.sh  crane.desktop
src/: branch_picker.rs  dir_cache.rs  file_watcher.rs  git.rs  layout.rs  mac_keys.rs  mac_paste.rs  main.rs  pane_view.rs  platform_menu.rs  project_cache.rs  session.rs  settings.rs  shortcuts.rs  startup.rs  state.rs  syntax.rs  terminal.rs  terminal_view.rs  theme.rs  ui_left.rs  ui_right.rs  ui_status.rs  ui_top.rs  ui_util.rs  update_check.rs  util.rs  workspace.rs
src/browser/: memory.rs  mod.rs
src/format/: mod.rs
src/git_log/: data.rs  graph.rs  mod.rs  refresh.rs  refs.rs  state.rs  view.rs
src/git_log/view/: details.rs  log.rs  mod.rs  refs.rs
src/jobs/: mod.rs  system.rs  tests.rs
src/lsp/: downloader.rs  mod.rs  protocol.rs  server.rs
src/modals/: confirm_close_tab.rs  confirm_delete_file.rs  confirm_quit.rs  confirm_remove_worktree.rs  empty_state.rs  help.rs  lsp_install.rs  missing_project.rs  mod.rs  new_workspace.rs  settings.rs  settings_lsp.rs  tab_switcher.rs  update_toast.rs
src/state/: layout.rs  mod.rs  project_cache.rs  session.rs  settings.rs  state.rs  wake.rs
src/terminal/: grid_snap.rs  mod.rs  sync_handler.rs  term.rs  view.rs
src/ui/: branch_picker.rs  explorer.rs  left.rs  mod.rs  pane_view.rs  projects.rs  right.rs  status.rs  top.rs  util.rs
src/update/: apply.rs  check.rs  mod.rs
src/views/: browser_view.rs  diagnostics_overlay.rs  diff_view.rs  file_find.rs  file_save.rs  file_status.rs  file_util.rs  file_view.rs  highlight.rs  markdown_view.rs  mod.rs  pdf_view.rs  welcome_view.rs
src/warpui/: browser.rs  browser_view.rs  bundled_fonts.rs  color.rs  controller.rs  diff_view.rs  editor_view.rs  file_pane.rs  file_tree.rs  file_watcher.rs  find_bar_element.rs  fontsize.rs  formatter.rs  git.rs  git_log.rs  git_log_element.rs  grid_element.rs  gutter_element.rs  history_store.rs  icons.rs  image_view.rs  layout.rs  line_edit.rs  markdown_view.rs  mod.rs  pdf_view.rs  persist.rs  platform_menu.rs  projects.rs  rect_probe.rs  scrollbar_element.rs  shell.rs  shell_init.rs  split.rs  theme.rs  update.rs  view.rs  welcome_view.rs
