[package]
name = "crane"
version = "0.4.6"
edition = "2024"
description = "Native GPU-rendered terminal + IDE environment"
authors = ["rajpootathar"]
license = "MIT"

[package.metadata.bundle]
name = "Crane"
identifier = "sh.superset.crane"
icon = ["icons/crane.icns", "crane.png"]
copyright = "Copyright © 2026 rajpootathar"
category = "Developer Tool"
short_description = "GPU-rendered terminal environment"
long_description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git workspaces.
"""

[package.metadata.bundle.deb]
depends = ["libxkbcommon0", "libwayland-client0", "libgl1", "libx11-6"]

[package.metadata.bundle.windows]

# cargo-deb (distinct from cargo-bundle's .deb support) — drives the
# Linux CI job. cargo-bundle produces a .deb from the .app-style
# manifest above; cargo-deb produces a standard Debian package wired
# directly from this metadata. We use cargo-deb in CI because it gives
# us explicit control over install paths, desktop entry, icon, and
# runtime deps without depending on cargo-bundle's Linux codepath.
[package.metadata.deb]
maintainer = "rajpootathar <info@aalasolutions.com>"
copyright = "2026, rajpootathar"
license-file = ["LICENSE", "0"]
extended-description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git worktree-backed Workspaces."""
depends = "$auto, libxkbcommon0, libwayland-client0, libgl1, libx11-6, libxcb1, libxcb-render0, libxcb-shape0, libxcb-xfixes0"
section = "devel"
priority = "optional"
assets = [
    ["target/release/crane", "usr/bin/", "755"],
    ["crane.png", "usr/share/icons/hicolor/512x512/apps/crane.png", "644"],
    ["scripts/linux/crane.desktop", "usr/share/applications/", "644"],
]


[dependencies]
eframe = { version = "0.34", features = ["wgpu", "persistence"] }
egui = "0.34"
alacritty_terminal = "0.25"
# Pulled in for the `CursorIcon` type that appears in vte's Handler
# trait signature (set_mouse_cursor_icon). vte doesn't re-export it,
# so we depend on the same crate directly. Pinned to the major
# version vte 0.15 uses — mismatch would produce a distinct type and
# fail to impl Handler.
cursor-icon = "1"
portable-pty = "0.9"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"] }
pulldown-cmark = { version = "0.11", default-features = false }
similar = "2"
webbrowser = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
rfd = "0.15"
egui-phosphor = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native application menu (macOS menu bar, Windows/Linux menubar).
# We only wire it up on macOS — gives us a real `Crane → Settings…`
# item + Preferences keyboard shortcut integration. muda is the
# de-facto winit-era replacement for the older tao menu API.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSEvent", "NSPasteboard", "NSImage", "NSBitmapImageRep", "NSResponder",
    "NSGraphics", "block2",
] }
objc2-foundation = { version = "0.2", features = [
    "NSArray", "NSString", "NSData", "NSDictionary",
] }
block2 = "0.5"
# Embedded browser pane (task #38). WKWebView wrapper that accepts a
# raw window handle as parent and lets us reposition it per frame to
# stay glued under the Browser pane's rect in egui.
wry = "0.55"
raw-window-handle = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release profile: strip symbols + panic=abort for modest size cut without
# trading away iteration speed. LTO was tried; the size win didn't justify
# the ~3× build time cost.
[profile.release]
opt-level = 3
strip = "symbols"
