[workspace]
# Root package + workspace. New library crates (e.g. the in-house
# terminal core `crane_term`) live under `crates/`. The binary at the
# root is implicitly a workspace member alongside whatever matches
# `crates/*`.
members = ["crates/*"]

[package]
name = "crane"
version = "0.4.36"
edition = "2024"
description = "Native GPU-rendered terminal + IDE environment"
authors = ["rajpootathar"]
license = "MIT"

[package.metadata.bundle]
name = "Crane"
identifier = "sh.superset.crane"
icon = ["icons/crane.icns", "crane.png"]
copyright = "Copyright © 2026 rajpootathar"
category = "Developer Tool"
short_description = "GPU-rendered terminal environment"
long_description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git workspaces.
"""

[package.metadata.bundle.deb]
depends = ["libxkbcommon0", "libwayland-client0", "libgl1", "libx11-6"]

[package.metadata.bundle.windows]

# cargo-deb (distinct from cargo-bundle's .deb support) — drives the
# Linux CI job. cargo-bundle produces a .deb from the .app-style
# manifest above; cargo-deb produces a standard Debian package wired
# directly from this metadata. We use cargo-deb in CI because it gives
# us explicit control over install paths, desktop entry, icon, and
# runtime deps without depending on cargo-bundle's Linux codepath.
[package.metadata.deb]
maintainer = "rajpootathar <info@aalasolutions.com>"
copyright = "2026, rajpootathar"
license-file = ["LICENSE", "0"]
extended-description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git worktree-backed Workspaces."""
depends = "$auto, libxkbcommon0, libwayland-client0, libgl1, libx11-6, libxcb1, libxcb-render0, libxcb-shape0, libxcb-xfixes0"
section = "devel"
priority = "optional"
assets = [
    ["target/release/crane", "usr/bin/", "755"],
    ["crane.png", "usr/share/icons/hicolor/512x512/apps/crane.png", "644"],
    ["scripts/linux/crane.desktop", "usr/share/applications/", "644"],
]


[dependencies]
eframe = { version = "0.34", features = ["wgpu", "persistence"] }
egui = "0.34"
# In-house terminal core. Owns VT parsing, grid, scrollback, and
# the linefeed routing that fixes TUI scrollback duplication
# (Claude Code splash etc.). Replaces alacritty_terminal entirely.
crane_term = { path = "crates/crane_term" }
portable-pty = "0.9"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"] }
pulldown-cmark = { version = "0.11", default-features = false }
similar = "2"
webbrowser = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
rfd = "0.15"
egui-phosphor = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
# Native trash / recycle-bin handling for the Files Pane "Delete"
# action. Cross-platform: Finder trash on macOS (via objc2),
# `gio trash` / `~/.local/share/Trash` on Linux, Recycle Bin on
# Windows. Deliberately picked over a hand-rolled `mv ~/.Trash/`
# shell-out so files keep their "Put Back" affordance in Finder.
trash = "5"
# PDF viewer (Files Pane file tab). Binds to libpdfium.dylib at
# runtime — we vendor the dylib via `make vendor-pdfium` so the bundle
# step has full control over arch + signing. Default features cover
# pdfium_latest + thread_safe + image (image::DynamicImage round-trip
# into egui::ColorImage).
pdfium-render = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native application menu (macOS menu bar, Windows/Linux menubar).
# We only wire it up on macOS — gives us a real `Crane → Settings…`
# item + Preferences keyboard shortcut integration. muda is the
# de-facto winit-era replacement for the older tao menu API.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSEvent", "NSPasteboard", "NSImage", "NSBitmapImageRep", "NSResponder",
    "NSGraphics", "block2",
] }
objc2-foundation = { version = "0.2", features = [
    "NSArray", "NSString", "NSData", "NSDictionary",
] }
block2 = "0.5"
# Embedded browser pane (task #38). WKWebView wrapper that accepts a
# raw window handle as parent and lets us reposition it per frame to
# stay glued under the Browser pane's rect in egui.
wry = "0.55"
raw-window-handle = "0.6"

# Linux browser pane. wry's `x11` feature (default-on) accepts a
# RawWindowHandle::Xlib from winit and bridges it to GTK/webkit2gtk
# internally by creating an X11 child window inside Crane's winit
# window and wrapping it as a `gdk_x11_window_foreign_new_for_display`
# GTK window. We still need the `gtk` crate directly so we can
# `gtk::init()` at app start and pump `main_iteration_do(false)` each
# frame from eframe's update — eframe drives winit's event loop, so
# GTK's callbacks don't fire unless we iterate them ourselves.
#
# Build-time deps on Ubuntu/Debian:
#   libwebkit2gtk-4.1-dev libgtk-3-dev libsoup-3.0-dev
# Fedora:
#   webkit2gtk4.1-devel gtk3-devel libsoup3-devel
[target.'cfg(target_os = "linux")'.dependencies]
wry = "0.55"
raw-window-handle = "0.6"
gtk = "0.18"

# Windows browser pane. wry uses WebView2 (Edge Chromium), which ships
# with Windows 10+ and is auto-installed on older Windows if missing.
[target.'cfg(target_os = "windows")'.dependencies]
wry = "0.55"
raw-window-handle = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release profile: strip symbols + panic=abort for modest size cut without
# trading away iteration speed. LTO was tried; the size win didn't justify
# the ~3× build time cost.
[profile.release]
opt-level = 3
strip = "symbols"
