[workspace]
# Root package + workspace. New library crates (e.g. the in-house
# terminal core `crane_term`) live under `crates/`. The binary at the
# root is implicitly a workspace member alongside whatever matches
# `crates/*`.
members = ["crates/*"]
# `vendor/warp` is the Warp monorepo (its own workspace), pulled in as a
# submodule so `warpui` can be path-depended on. Keep it out of Crane's
# workspace so cargo treats warpui as an external path dependency.
exclude = ["vendor"]

[package]
name = "crane"
version = "0.6.1"
edition = "2024"
description = "Native GPU-rendered terminal + IDE environment"
authors = ["rajpootathar"]
license = "MIT"

[package.metadata.bundle]
name = "Crane"
identifier = "sh.superset.crane"
icon = ["icons/crane.icns", "crane.png"]
copyright = "Copyright © 2026 rajpootathar"
category = "Developer Tool"
short_description = "GPU-rendered terminal environment"
long_description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git workspaces.
"""

[package.metadata.bundle.deb]
depends = ["libxkbcommon0", "libwayland-client0", "libgl1", "libx11-6"]

[package.metadata.bundle.windows]

# cargo-deb (distinct from cargo-bundle's .deb support) — drives the
# Linux CI job. cargo-bundle produces a .deb from the .app-style
# manifest above; cargo-deb produces a standard Debian package wired
# directly from this metadata. We use cargo-deb in CI because it gives
# us explicit control over install paths, desktop entry, icon, and
# runtime deps without depending on cargo-bundle's Linux codepath.
[package.metadata.deb]
maintainer = "rajpootathar <info@aalasolutions.com>"
copyright = "2026, rajpootathar"
license-file = ["LICENSE", "0"]
extended-description = """
Crane is a native, GPU-rendered desktop development environment for
orchestrating terminals, editors, and git workflows across isolated
git worktree-backed Workspaces."""
depends = "$auto, libxkbcommon0, libwayland-client0, libgl1, libx11-6, libxcb1, libxcb-render0, libxcb-shape0, libxcb-xfixes0"
section = "devel"
priority = "optional"
assets = [
    ["target/release/crane", "usr/bin/", "755"],
    ["crane.png", "usr/share/icons/hicolor/512x512/apps/crane.png", "644"],
    ["scripts/linux/crane.desktop", "usr/share/applications/", "644"],
]


[dependencies]
# Warp's MIT-licensed GPU UI framework (vendored under vendor/warp). warpui is
# Crane's sole frontend — it owns its own NSApplication / event loop.
warpui = { path = "vendor/warp/crates/warpui" }
# In-house terminal core. Owns VT parsing, grid, scrollback, and
# the linefeed routing that fixes TUI scrollback duplication
# (Claude Code splash etc.). Replaces alacritty_terminal entirely.
crane_term = { path = "crates/crane_term" }
portable-pty = "0.9"
parking_lot = "0.12"
# warpui frontend (src/warpui): async repaint channel + embedded phosphor TTF.
async-channel = "2"
rust-embed = "8"
anyhow = "1"
# Warp's real text editor (rich-text/code), embeddable as warpui elements —
# replaces the hand-rolled FileView so the file pane is warp-quality.
warp_editor = { path = "vendor/warp/crates/editor" }
string-offset = { path = "vendor/warp/crates/string-offset" }
# Warp's markdown content model (FormattedText / FormattedTextFragment).
# Not re-exported through warpui/warpui_core — those crates depend on it
# internally but keep it private, so the markdown view depends on it
# directly to build FormattedTextElement content for wrapping mixed-style
# paragraphs (src/warpui/markdown_view.rs).
markdown_parser = { path = "vendor/warp/crates/markdown_parser" }
rangemap = "1.7"
log = "0.4"
env_logger = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.4", default-features = false, features = ["syntect-fancy"] }
pulldown-cmark = { version = "0.11", default-features = false }
similar = "2"
webbrowser = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
flate2 = "1"
# Native trash / recycle-bin handling for the Files Pane "Delete"
# action. Cross-platform: Finder trash on macOS (via objc2),
# `gio trash` / `~/.local/share/Trash` on Linux, Recycle Bin on
# Windows. Deliberately picked over a hand-rolled `mv ~/.Trash/`
# shell-out so files keep their "Put Back" affordance in Finder.
trash = "5"
# Cross-platform filesystem watcher (FSEvents on macOS, inotify on Linux,
# ReadDirectoryChangesW on Windows). One RecommendedWatcher services every
# Project; a single debouncer thread coalesces bursts. See
# src/warpui/file_watcher.rs. 8.x is the latest stable line.
notify = "8"

[dev-dependencies]
tempfile = "3"

# Native application menu (macOS menu bar, Windows/Linux menubar).
# We only wire it up on macOS — gives us a real `Crane → Settings…`
# item + Preferences keyboard shortcut integration. muda is the
# de-facto winit-era replacement for the older tao menu API.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
# Embedded WKWebView for the Browser Pane. wry parents a native webview
# under the main NSWindow's content view; we hand it a raw AppKit window
# handle fetched via objc2 (see src/warpui/browser.rs::HostWindow). Same
# major versions the old egui frontend shipped with — the WKWebView glue
# (SPA URL hook, page-load events, set_bounds-every-frame) is a 1:1 port.
wry = "0.55"
raw-window-handle = "0.6"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSEvent", "NSPasteboard", "NSImage", "NSBitmapImageRep", "NSResponder",
    "NSGraphics", "block2",
] }
objc2-foundation = { version = "0.2", features = [
    "NSArray", "NSString", "NSData", "NSDictionary", "NSGeometry",
] }
block2 = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release profile. LTO was tried; the size win didn't justify the ~3× build
# time cost. `strip = "debuginfo"` (not "symbols"): drops DWARF debug info for
# a real size cut but KEEPS the symbol table, so a crash — whether macOS's own
# .ips report or our panic hook's backtrace (main.rs::install_crash_logger) —
# resolves to real function names instead of bare hex offsets. A previous
# `strip = "symbols"` build made a production crash unsymbolicatable without
# rebuilding the exact commit from source.
[profile.release]
opt-level = 3
strip = "debuginfo"

# --- warpui (Warp) integration pins ---------------------------------------
# Warp's `warpui` (vendored under vendor/warp) builds against a git-pinned
# `font-kit` fork that requires the servo core-foundation-rs git revision for
# core-graphics/core-text/core-foundation. Those pins live in Warp's own
# workspace `[patch]`, which cargo ignores when building from Crane's
# workspace — so without replicating them here the graph ends up with two
# incompatible `core_graphics` versions and font-kit fails to compile.
# Mirrors vendor/warp/Cargo.toml [patch.crates-io].
[patch.crates-io]
core-foundation = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-text = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
objc = { git = "https://github.com/warpdotdev/rust-objc.git", rev = "5b656827fa9f863ef0eb22e444a3fedac009e78a" }
pathfinder_simd = { git = "https://github.com/warpdotdev/pathfinder.git", rev = "34128a129ca6aee168fbc5060a4f21b4f7e486a9" }
