[package]
name = "warp_term_spike"
version = "0.0.0"
edition = "2021"
publish = false
description = "Spike: render a terminal grid via Warp's warpui inside Crane's build graph"

[[bin]]
name = "warp_term_spike"
path = "src/main.rs"

[dependencies]
# Warp's MIT-licensed GPU UI framework, vendored as a git submodule.
warpui = { path = "../../vendor/warp/crates/warpui" }
# Crane's in-house VT parser / grid (drives the live terminal later).
crane_term = { path = "../crane_term" }
anyhow = "1"
rust-embed = "8"
portable-pty = "0.9"
async-channel = "2"
parking_lot = "0.12"
serde_json = "1"
